# rake

./: .gitignore  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
src/rake/: config.py  docker_entrypoint.py  main.py  meta_schemas.py  protocols.py  server.py
src/rake/errors/: cli.py  plugins.py  scraper.py
src/rake/plugins/imdb_movie/: schemas.py  scraper.py
src/rake/plugins/rym_album/: schemas.py  scraper.py
src/rake/plugins/test_scraper/: schemas.py  scraper.py
src/rake/utils/: loader.py
tests/: test_api.py  test_utils.py
