[metadata]
name = rake
description = rake is an api providing a variety of Web Scraping Plugins. It can be linked with a memex Server.
author = philmish
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	

[options]
package = 
	rake
	
install_requires = 
	pydantic
	requests
	fastapi[all]
	beautifulsoup4
	
	
python_requires = >=3.6
package_dir = 
	=src
	
zip_safe = no

[options.extras_require]
testing = 
	pytest>=6.0
	pytest-cov>=2.0
	mypy>=0.910
	flake8>=3.9
	tox>=3.24
	

[options.package_data]
rake = yes

[flake8]
max-line-length = 160

